--- a/package.json
+++ b/package.json
@@ -5,6 +5,14 @@
   "author": "Antti Kissaniemi <antti.kissaniemi@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "prettier": "^1.18.2"
+    "@vue/component-compiler-utils": "^3.0.0",
+    "parcel": "^1.12.3",
+    "prettier": "^1.18.2",
+    "stylus": "^0.54.7",
+    "vue-template-compiler": "^2.6.10"
+  },
+  "dependencies": {
+    "vue": "^2.6.10",
+    "vue-hot-reload-api": "^2.3.3"
   }
 }
